# openapi.yaml
@@ -93,6 +93,32 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/ProductResponse"
+  /api/products/{id}/stock/increase:
+    post:
+      tags:
+      - Products
+      summary: Increase stock for a product by ID
+      operationId: increaseStock
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+          format: uuid
+      - name: amount
+        in: query
+        required: true
+        schema:
+          type: integer
+          format: int32
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ProductResponse"
   /api/reservations/{id}:
     get:
       tags:
